--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
 	<div class="container">
 		<h1>Papier, kamień, nożyce</h1>
+		<p>Nożyce są silniejsze od papieru, ponieważ go tną.<br>Kamień jest silniejszy od nożyc, ponieważ je tępi.
+			<br>Papier jest silniejszy od kamienia, ponieważ go owija.</p>
 		<div id="buttons">
 			<button id="button-rock">Kamień</button>
 			<button id="button-paper">Papier</button>
